--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,12 +11,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
+        with:
+            python-version: 3.12
       - name: Install dependencies
         run: |
-            pip install requirements-dev.txt
-            for file in test/*.py; do
-            python "$file"
-            done
+            pip install -r requirements-dev.txt
+      - name: Run tests
+        run: pytest tests/
     
         
         
