--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,11 +13,19 @@ jobs:
       - uses: actions/setup-python@v5
         with:
             python-version: 3.12
+      - name: Set up environment variables
+        run: echo "Environment variables set up"
+        env:
+          API_KEY: ${{ secrets.API_KEY }}
+          API_SECRET: ${{ secrets.API_SECRET }}
       - name: Install dependencies
         run: |
             pip install -r requirements-dev.txt
       - name: Run tests
         run: pytest tests/
+        env:
+          API_KEY: ${{ secrets.API_KEY }}
+          API_SECRET: ${{ secrets.API_SECRET }}
     
         
         
