--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,16 +16,16 @@ jobs:
       - name: Set up environment variables
         run: echo "Environment variables set up"
         env:
-          API_KEY: ${{ secrets.API_KEY }}
-          API_SECRET: ${{ secrets.API_SECRET }}
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
       - name: Install dependencies
         run: |
             pip install -r requirements-dev.txt
       - name: Run tests
         run: pytest tests/
         env:
-          API_KEY: ${{ secrets.API_KEY }}
-          API_SECRET: ${{ secrets.API_SECRET }}
+          API_KEY: ${{ secrets.CLIENT_ID }}
+          API_SECRET: ${{ secrets.CLIENT_SECRET }}
     
         
         
