--- a/__config.yml
+++ b/__config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Notebook Tools Documentation
+title: Mass spectrometry metadata generation
 description: Documentation page for functions in this repo.
