--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: test
+name: tests
 
 on: [push, pull_request, workflow_dispatch]
 
@@ -14,6 +14,7 @@ jobs:
         with:
             python-version: 3.12
       - name: Set up environment variables
+        working-directory: ./src
         run: echo "Environment variables set up"
         env:
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
@@ -22,10 +23,11 @@ jobs:
         run: |
             pip install -r requirements-dev.txt
       - name: Run tests
-        run: pytest tests/
+        working-directory: ./src
         env:
           API_KEY: ${{ secrets.CLIENT_ID }}
           API_SECRET: ${{ secrets.CLIENT_SECRET }}
+        run: pytest tests/test_lipid_metadata_gen.py
     
         
         
