--- a/.github/workflows/pre_release_tests.yml
+++ b/.github/workflows/pre_release_tests.yml
@@ -28,8 +28,9 @@ jobs:
       - name: Install dependencies
         run: |
             python -m pip install --upgrade pip
-            pip install pytest requests~=2.32.3 requests-oauthlib~=2.0.0 linkml-runtime~=1.8.2 pyyaml~=6.0.2 tqdm~=4.66.5 pandas~=2.2.3 python-dotenv==1.0.1 typing-inspect~=0.9.0 nmdc_api_utilities
-            pip install --pre nmdc_schema
+            pip install -r requirements.txt
+            pip uninstall nmdc-schema
+            pip install --pre nmdc-chema
       - name: Run tests
         working-directory: ./src
         env:
