--- a/.github/workflows/pre_release_tests.yml
+++ b/.github/workflows/pre_release_tests.yml
@@ -30,7 +30,7 @@ jobs:
             python -m pip install --upgrade pip
             pip install -r requirements.txt
             pip uninstall -y nmdc-schema
-            pip install --pre nmdc-chema
+            pip install --pre nmdc-schema
       - name: Run tests
         working-directory: ./src
         env:
