--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,9 +29,9 @@ jobs:
         run: |
             pip install -r requirements-dev.txt
       - name: Run tests
-        working-directory: ./
+        working-directory: ./src
         env:
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
           BIO_API_KEY: ${{ secrets.BIO_API_KEY }}
-        run: pytest -r src/tests/
+        run: pytest tests/test_cli.py
