--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,6 @@ name: tests
 
 on:
   push:
-  pull_request:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
@@ -34,4 +33,4 @@ jobs:
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
           BIO_API_KEY: ${{ secrets.BIO_API_KEY }}
-        run: pytest -r tests/
+        run: pytest tests/test_main.py
