--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,6 +2,7 @@ name: tests
 
 on:
   push:
+  pull_request:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
@@ -33,4 +34,4 @@ jobs:
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
           BIO_API_KEY: ${{ secrets.BIO_API_KEY }}
-        run: pytest tests/test_main.py
+        run: pytest -r tests/
