--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
           BIO_API_KEY: ${{ secrets.BIO_API_KEY }}
       - name: Install dependencies
         run: |
-            pip install -r requirements-dev.txt
+            pip install -r requirements.txt
       - name: Run tests
         working-directory: ./src
         env:
