--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
             pip install -r requirements.txt
+            pip install -r requirements-dev.txt
       - name: Run tests
         working-directory: ./src
         env:
