--- a/.github/workflows/pre_release_tests.yml
+++ b/.github/workflows/pre_release_tests.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
             python -m pip install --upgrade pip
             pip install -r requirements.txt
+            pip install -r requirements-dev.txt
             pip uninstall -y nmdc-schema
             pip install --pre nmdc-schema
       - name: Run tests
