--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ tqdm~=4.66.5
 pandas~=2.2.3
 python-dotenv==1.0.1
 typing-inspect~=0.9.0
-nmdc_api_utilities>=0.3.7
+nmdc_api_utilities==0.4.0
 toml~=0.10.2
