--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,16 +16,15 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "nmdc-schema~=11.4.0",
+    "nmdc-schema==11.9.1",
     "requests~=2.32.3",
     "requests-oauthlib~=2.0.0",
-    "linkml-runtime~=1.8.2",
     "pyyaml~=6.0.2",
     "tqdm~=4.66.5",
     "pandas~=2.2.3",
     "python-dotenv==1.0.1",
     "typing-inspect~=0.9.0",
-    "nmdc_api_utilities>=0.3.5",
+    "nmdc_api_utilities==0.4.0",
     "toml~=0.10.2"
 ]
 license = { file = "LICENSE" }
