--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
         with:
             python-version: 3.12
       - name: Set up environment variables
-        working-directory: ./src
+        working-directory: ./nmdc_ms_metadata_gen
         run: echo "Environment variables set up"
         env:
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
@@ -30,7 +30,7 @@ jobs:
             pip install -r requirements.txt
             pip install -r requirements-dev.txt
       - name: Run tests
-        working-directory: ./src
+        working-directory: ./nmdc_ms_metadata_gen
         env:
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
