--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 __pycache__/
 *.py[cod]
 *$py.class
-nmdc_ms_metadata/tests/.test.ipynb
+nmdc_ms_metadata_gen/tests/.test.ipynb
 # C extensions
 *.so
-nmdc_ms_metadata/tests/test_data/test_database_*.json
+nmdc_ms_metadata_gen/tests/test_data/test_database_*.json
 # Distribution / packaging
 .Python
 build/
