--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ license = { file = "LICENSE" }
 [tool.setuptools]
 py-modules = ["main"]  # This tells setuptools to include main.py
 [project.scripts]
-nmdc_ms_metadata_gen = "main:cli"
+nmdc-ms-metadata-gen = "main:cli"
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["nmdc_ms_metadata_gen*"]
