copy over new changes, add sams tests

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,8 +25,8 @@ repos:
       - id: sort-simple-yaml
         files: '.yaml$'
       - id: check-symlinks
-      - id: check-yaml
-        exclude: '(.*-ci|ci/.+)\.yml$'
+      # - id: check-yaml
+      #   exclude: '(.*-ci|ci/.+)\.yml$'
       - id: detect-private-key
       - id: trailing-whitespace
 
