--- a/.github/workflows/pre_release_tests.yml
+++ b/.github/workflows/pre_release_tests.yml
@@ -3,8 +3,8 @@ name: pre release tests
 on:
   pull_request:
   workflow_dispatch:
-  schedule:
-    - cron: '0 0 * * *'
+  # schedule:
+  #   - cron: '0 0 * * *'
 
 permissions:
   contents: write
