--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,15 +16,10 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "nmdc-schema==11.9.1",
-    "requests~=2.32.3",
-    "requests-oauthlib~=2.0.0",
-    "pyyaml~=6.0.2",
+    "nmdc-schema>=11.12.0",
     "tqdm~=4.66.5",
-    "pandas~=2.2.3",
     "python-dotenv==1.0.1",
-    "typing-inspect~=0.9.0",
-    "nmdc_api_utilities==0.4.0",
+    "nmdc_api_utilities==0.4.2",
     "toml~=0.10.2"
 ]
 license = { file = "LICENSE" }
