--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "nmdc-schema>=11.12.0",
     "tqdm~=4.66.5",
     "python-dotenv==1.0.1",
+    "typing-inspect~=0.9.0",
     "nmdc_api_utilities==0.4.2",
     "toml~=0.10.2"
 ]
