--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
             pip install -r requirements.txt
             pip install -r requirements-dev.txt
+            pip install -e .
       - name: Run tests
         working-directory: ./nmdc_ms_metadata_gen
         env:
